rent atist-detaitl rent artist-product detail and fix design web

--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -35,13 +35,13 @@
   "city_tour" : "Whole City Tour",
   "baggage_transport" : "Baggage transport",
   "promo_text" : "Do You Want To Earn With Us? So Don't be Late.",
-  "promo_btn" : "Become a driver",
+  "promo_btn" : "Become an Artist",
   "day" : "Day",
-  "model" : "Model",
+  "model" : "Category",
   "rental" : "rental",
   "rating" : "rating",
   "automatic" : "Automatic",
-  "rent_car" : "Rent Car",
+  "rent_car" : "Rent Artist",
   "details" : "Details",
   "come_with" : "Come with",
   "hot_offers" : "Hot offers",
@@ -59,12 +59,12 @@
   "btn_gallery" : "More Pictures",
   "key_words" : "Keywords...",
   "by_category" : "By Category",
-  "top_selling" : "top selling",
+  "top_selling" : "top favorites",
   "price" : "Price",
   "quantity" : "Quantity",
-  "add_to_cart" : "add to cart",
+  "add_to_cart" : "Order",
   "products" : "products",
-  "related_products" : "related products",
+  "related_products" : "others products",
   "comments" : "Comments",
   "leave_comment" : "Leave a comment",
   "post_comment" : "post comment",
@@ -98,9 +98,9 @@
     "service" : "service",
     "all_service" : "All Services",
     "service_details" : "Service Details",
-    "cars" : "cars",
-    "car_listing" : "car listing",
-    "car_booking" : "car booking",
+    "cars" : "Artist",
+    "car_listing" : "Artist listing",
+    "car_booking" : "Artist booking",
     "gallery" : "gallery",
     "shop" : "shop",
     "product" : "product",
@@ -117,8 +117,8 @@
   },
   "about_page" : {
     "subtitle" : "About Us",
-    "title" : "We are committed to provide safe Ride solutions",
-    "proud_title" : "We are proud of our business. <span>Rent Car</span> Now!"
+    "title" : "Committed To Providing Artistic Experiences",
+    "proud_title" : "We Are Proud Of Our Business. Rent Artwork Now!"
    },
    "service_details_page" : {
      "discount_text" : "40% off only for new members",
